# Translator

./: CMakeLists.txt  README.md  СmakeList.txt
Examples of translator work/: 1.asm  1.p16  2.asm  2.p16  3.asm  3.p16  errors.txt  lexems.txt
Translator_code/: Analizators.cpp  Analizators.h  CMakeLists.txt  CodeGenarator.cpp  CodeGenarator.h  Data.cpp  Data.h  Errors.cpp  Errors.h  Main.cpp  Resource.aps  Resource.rc
